--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>This is Local Repository</p>
-<p>This is a new feature in branch feature1</p>
+<p>This is a new feature in branch feature1 (dropdown)</p>
